--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -205,8 +205,6 @@
     <Compile Include="Slides\U08_Recursion\S050_Subsets.cs" />
     <Compile Include="Slides\U08_Recursion\S060_Permutations.cs" />
     <Compile Include="Slides\U08_Recursion\S070_Combinations.cs" />
-    <Compile Include="Slides\U08_Recursion\S080_BinSearch.cs" />
-    <Compile Include="Slides\U08_Recursion\S090_ComparingSearches.cs" />
     <Compile Include="Slides\U09_Sorting\S010_BinSearch.cs" />
     <Compile Include="Slides\U09_Sorting\S020_LinearSearch.cs" />
     <Compile Include="Slides\U09_Sorting\S030_BinSearchAnalysis.cs" />
@@ -263,7 +261,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM copy this post build step to new course
-$(SolutionDir)packages\NUnit.Runners.2.6.3\tools\nunit-console.exe $(TargetPath) || exit /b
+$(SolutionDir)packages\NUnit.Runners.2.6.3\tools\nunit-console.exe $(TargetPath) /exclude:Long || exit /b
 del "$(OutDir)$(ProjectName).zip"
 "$(SolutionDir)..\tools\7z\7za.exe" a "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
 copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\</PostBuildEvent>
