Review testing. Rewrite tex embedding. New katex.js with support of \subset

--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -95,6 +95,9 @@
     <Content Include="Slides\U07_Algorithms\S035_Complexity_vs_Speed.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Slides\U07_Algorithms\S075_Estimation.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Slides\U07_Algorithms\S085_Final.xml">
       <SubType>Designer</SubType>
     </Content>
