--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -13,7 +13,7 @@
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup></configSections>
+    </sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
@@ -118,7 +118,7 @@
 	</entityFramework>
 	<elmah>
 		<security allowRemoteAccess="1" />
-		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200"/>
+		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200" />
 	</elmah>
 	<location path="elmah">
 		<!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
