Добавил слайд про ассоциативный массив

--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -92,7 +92,10 @@
     <Compile Include="Slides\U02_Polymorphism\S050_OptimizeForNoise.cs" />
     <Compile Include="Slides\U02_Polymorphism\S040_Noise.cs" />
     <Compile Include="Slides\U02_Polymorphism\S060_Visualize.cs" />
-    <Compile Include="Slides\U03_DataStructure\S010_DataStructures.cs">
+    <Compile Include="Slides\U03_DataStructure\S020_IAssociativeArray.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Slides\U03_DataStructure\S010_AssociativeArray.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Slides\U02_Polymorphism\S010_IRobotNavigator.cs">
