Поправил опечатки и сделал зачатки разделов

--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Slides\U02_Polymorphism\S050_OptimizeForNoise.cs" />
     <Compile Include="Slides\U02_Polymorphism\S040_Noise.cs" />
     <Compile Include="Slides\U02_Polymorphism\S060_Visualize.cs" />
+    <Compile Include="Slides\U03_DataStructure\S040_IHeap.cs" />
     <Compile Include="Slides\U03_DataStructure\S020_IAssociativeArray.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -101,6 +102,9 @@
     <Compile Include="Slides\U02_Polymorphism\S010_IRobotNavigator.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Slides\U03_DataStructure\S030_Heap.cs" />
+    <Compile Include="Slides\U03_DataStructure\S050_Generics.cs" />
+    <Compile Include="Slides\U03_DataStructure\S060_LimitedAutocomplete.cs" />
     <Content Include="CoursesTests.cs" />
   </ItemGroup>
   <ItemGroup>
