--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Slides\U00_Basics\S070_MethodsVideo.cs" />
     <Compile Include="Slides\U00_Basics\S072_Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slides\U08_Recursion\S099_RoutePlanningExercise.cs" />
     <Compile Include="Slides\U10_OOP\S010_Classes.cs" />
     <Compile Include="Slides\U10_OOP\S020_StaticAndDynamic.cs" />
     <Compile Include="Slides\U10_OOP\S030_Methods.cs" />
@@ -128,6 +129,7 @@
     <Content Include="Slides\manipulator.png" />
     <Content Include="Slides\U08_Recursion\Title.txt" />
     <Content Include="Slides\U08_Recursion\_20_map.png" />
+    <Content Include="Slides\U08_Recursion\_30_map.png" />
     <Content Include="Slides\U09_Sorting\Title.txt" />
     <Content Include="Slides\U10_OOP\Title.txt" />
     <Content Include="Slides\U11_Inheritance\Title.txt" />
@@ -241,7 +243,6 @@
     <Compile Include="Slides\U08_Recursion\S065_FinishPermutations.cs" />
     <Compile Include="Slides\U08_Recursion\S055_FixSubsets.cs" />
     <Compile Include="Slides\U08_Recursion\S015_FixRecursion.cs" />
-    <Compile Include="Slides\U08_Recursion\S099_TicTacToeExercise.cs" />
     <Compile Include="Slides\Manipulator_Exercise.cs" />
     <Compile Include="Slides\U09_Sorting\S099_Exercise.cs" />
     <Compile Include="Slides\U08_Recursion\S010_Recursion.cs" />
@@ -273,6 +274,7 @@
     <None Include="Slides\U07_Complexity\image.zip" />
     <None Include="Slides\U07_Complexity\_complexity.pdf" />
     <None Include="Slides\U08_Recursion\InstructorNotes.md" />
+    <None Include="Slides\U08_Recursion\route-planning.zip" />
     <None Include="Slides\U08_Recursion\_S020_MemoryMap.odp" />
     <None Include="Slides\U09_Sorting\autocomplete.zip" />
     <None Include="Slides\U09_Sorting\InstructorNotes.md" />
