--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -231,6 +231,10 @@
     <Compile Include="Migrations\201410221523323_add index.Designer.cs">
       <DependentUpon>201410221523323_add index.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410280605055_add index for Quizzes.cs" />
+    <Compile Include="Migrations\201410280605055_add index for Quizzes.Designer.cs">
+      <DependentUpon>201410280605055_add index for Quizzes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\AcceptedSolutionsPageModel.cs" />
     <Compile Include="Models\AnalyticsTablePageModel.cs" />
     <Compile Include="Models\ChoiceGroupPageModel.cs" />
@@ -392,6 +396,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410221523323_add index.resx">
       <DependentUpon>201410221523323_add index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410280605055_add index for Quizzes.resx">
+      <DependentUpon>201410280605055_add index for Quizzes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
