Web.config reformat

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -7,13 +7,14 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		
-	<sectionGroup name="elmah">
-      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
-      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
-      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+		<sectionGroup name="elmah">
+			<section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+			<section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+			<section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+			<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+		</sectionGroup>
+	</configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
@@ -26,7 +27,7 @@
 		<add key="elmah.mvc.disableHandleErrorFilter" value="false" />
 		<!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
 		<add key="elmah.mvc.requiresAuthentication" value="false" />
-		<add key="elmah.mvc.IgnoreDefaultRoute" value="false" /> 
+		<add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
 		<add key="elmah.mvc.allowedRoles" value="*" />
 		<add key="elmah.mvc.allowedUsers" value="*" />
 		<add key="elmah.mvc.route" value="elmah" />
@@ -40,23 +41,24 @@
 		</compilation>
 		<httpRuntime targetFramework="4.5" />
 		<customErrors mode="Off" />
-		
-	<httpModules>
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
-      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
-    </httpModules></system.web>
+
+		<httpModules>
+			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+		</httpModules>
+	</system.web>
 	<system.webServer>
 		<modules>
 			<remove name="FormsAuthenticationModule" />
-			
-			
-			
-		<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+
+
+
+			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
 		</modules>
-		
+
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
 			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
@@ -69,7 +71,8 @@
 				</hiddenSegments>
 			</requestFiltering>
 		</security>
-	<validation validateIntegratedModeConfiguration="false" /></system.webServer>
+		<validation validateIntegratedModeConfiguration="false" />
+	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
