--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -124,6 +124,7 @@
     <Content Include="Slides\U01_DataTypes_And_Algorithms\Title.txt" />
     <Content Include="Slides\U00_Intro\Title.txt" />
     <Content Include="Slides\U02_Polymorphism\Title.txt" />
+    <Content Include="Slides\U03_DataStructure\heap.bmp" />
     <Content Include="Slides\U03_DataStructure\Title.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
