--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slides\U08_Recursion\S099_RoutePlanningExercise.cs" />
     <Compile Include="Slides\U09_Sorting\S045_BinSearch.cs" />
+    <Compile Include="Slides\U09_Sorting\S055_BubbleSortRange.cs" />
     <Compile Include="Slides\U10_OOP\S010_Classes.cs" />
     <Compile Include="Slides\U10_OOP\S020_StaticAndDynamic.cs" />
     <Compile Include="Slides\U10_OOP\S030_Methods.cs" />
@@ -127,6 +128,9 @@
     <Content Include="Slides\U09_Sorting\bubblesort.gif" />
     <Content Include="Slides\U09_Sorting\mergesort.gif" />
     <Content Include="Slides\U09_Sorting\quicksort.gif" />
+    <Content Include="Slides\U09_Sorting\S080_Complexity.quiz.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Slides\U09_Sorting\S025_Analysis.quiz.xml">
       <SubType>Designer</SubType>
     </Content>
