--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -51,10 +51,14 @@
     <Compile Include="PageObjects\SignInPage.cs" />
     <Compile Include="PageObjects\SlidePage.cs" />
     <Compile Include="PageObjects\StartPage.cs" />
+    <Compile Include="PageObjects\TOC.cs" />
+    <Compile Include="PageObjects\TOCLection.cs" />
     <Compile Include="PageObjects\ULearnConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SELENIUM_TESTS_1\FirstTest.cs" />
     <Compile Include="Tests\LoginTest.cs" />
+    <Compile Include="Tests\TestRateButton.cs" />
+    <Compile Include="Tests\TOCModelCreateTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
